test/valid/56269_associativity/associativity.agu
-- Author: 56269, Frederico Prazeres

-- 2 ^ ((-3) ^ 2) = 2 ^ 9 = 512

let assoc (_) : Unit -> Int =
  let i : Int = 2 ^ -3 ^ 2;
  i

let main(_) : Unit -> Unit =
  print(assoc(unit)) 
  