test/invalid-syntax/56269_bad_assignment/bad_assignment.agu
-- Author: 56269, Frederico Prazeres

-- Syntax Error: missing an "="

let a : Int = 0;
set a 3;